--- a/video.html
+++ b/video.html
@@ -61,9 +61,7 @@
         </nav>
     </header>
     <h1>Mutya Teaser</h1>
-    <video width="560" height="315" controls>
-        <source src="img/mutya_.mp4" type="video/mp4">
-    </video>
+    <iframe width="560" height="315" src="https://drive.google.com/file/d/1vrURR06JKPITnJVZZ-1ScPZlaGmUMlo_/preview" frameborder="0" allowfullscreen></iframe>
 
     <footer>
         <p>&copy; 2024 Jasel M. Laude</p>
