--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <style>
+    footer {
+        background-color: #333;
+        color: white;
+        text-align: center;
+        padding: 10px;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+    }
+    </style>
     <title>Laude_Portfolio</title>
 </head>
 <body>
@@ -28,5 +39,8 @@
             <a href="more.html" class="more-info-button">More Info</a>
         </div>
     </section>
+    <footer>
+        <p>&copy; 2024 Jasel M. Laude</p>
+    </footer>
 </body>
 </html>
