--- a/more.html
+++ b/more.html
@@ -41,6 +41,15 @@
     section {
       margin-bottom: 10px;
     }
+    footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
     </style>
 </head>
 <body>
@@ -81,6 +90,9 @@
         <a data-fancybox="gallery" href="cert/certwork.jpg"><img src="cert/certwork.jpg" alt="Image 9"></a>
     
     </div>
+    <footer>
+        <p>&copy; 2024 Jasel M. Laude</p>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
     </html>
