--- a/ux.html
+++ b/ux.html
@@ -32,6 +32,15 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             cursor: pointer;
         }
+        footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
     </style>
 </head>
 <body>
@@ -78,6 +87,9 @@
         <a data-fancybox="gallery" href="UI/uxcart.png"><img src="UI/uxcart.png" alt="Image 24"></a>
     
     </div>
+    <footer>
+        <p>&copy; 2024 Jasel M. Laude</p>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
     </html>
